Reformat and Other things